[package]
name = "bool-lut"
version = "0.1.0"
edition = "2021"

# No guest sub-crate — this example runs entirely on the host using
# Jolt's lookup-table and sumcheck primitives directly (no RISC-V zkVM).

[dependencies]
jolt-core = { workspace = true, features = ["host"] }
ark-bn254  = { workspace = true, features = ["std"] }
ark-ec     = { workspace = true }
ark-ff     = { workspace = true, features = ["std"] }
ark-serialize = { workspace = true }
serde      = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
